--- a/src/app/components/foo/foo.component.html
+++ b/src/app/components/foo/foo.component.html
@@ -1,1 +1,10 @@
-<h1>{{ title?.toUpperCase() }}</h1>
+<h1>{{ title.toUpperCase() }}</h1>
+<p>foo works</p>
+<button (click)="onSayHi()">Sey Hi!!! {{ foo }}</button>
+
+<hr>
+<div>
+  <button (click)="counterChange.emit(counter - 1)">-1</button>
+  <span>{{ counter }}</span>
+  <button (click)="counterChange.emit(counter + 1)">+1</button>
+</div>
