--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <button (click)="show = !show">toggle</button>
 <button (click)="title = title + '1'">Modify input</button>
-<app-parent *ngIf="show" [title]="title"></app-parent>
+<button (click)="modifyArray()">Modify array</button>
+<app-parent *ngIf="show" [array]="array" [title]="title"></app-parent>
