--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -1,2 +1,5 @@
 <p>Parent works! {{ title }}</p>
 <app-child [title]="title"></app-child>
+<div>
+  <span *ngFor="let i of array">{{ i }}</span>
+</div>
